--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,12 @@ h1 {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+@media (orientation: landscape) {
+    .table-container {
+        width: 70%; /* Adjust width for landscape mode */
+    }
+}
+
 .highlight {
     background-color: #cbcb32 !important;
 }
